tests/snapshots/bundle_rules@structural-SequentBindingMode.snap
---
source: src/analyses/compute_rules.rs
info:
  bundle_name: structural
  options:
    match_constructor_through_ref: false
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: Error
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: false
    ref_binding_on_inherited: Error
    mut_binding_on_inherited: Error
---
move, m ⊢ p0: T0,  move, m ⊢ p1: T1
----------------------------------- "Constructor"
move, m ⊢ [p0, p1]: [T0, T1]

move, ro ⊢ p: T
---------------- "Deref"
move, m ⊢ &p: &T

move, m ⊢ p: T
------------------------ "Deref"
move, m ⊢ &mut p: &mut T

ref, m ⊢ x: T
------------------ "BindingBorrow"
move, m ⊢ ref x: T

ref mut, m ⊢ x: T
---------------------- "BindingBorrow"
move, m ⊢ ref mut x: T


------------ "Binding"
bm, m ⊢ x: T


------------------ "Binding"
move, m ⊢ mut x: T
