tests/snapshots/bundle_rules@structural-SequentInMemory.snap
---
source: src/analyses/compute_rules.rs
info:
  bundle_name: structural
  options:
    match_constructor_through_ref: false
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: Error
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: false
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
---
move ⊢ p0: T0,  move ⊢ p1: T1
----------------------------- "Constructor"
move ⊢ [p0, p1]: [T0, T1]

move ⊢ p: T
------------- "Deref"
move ⊢ &p: &T

move ⊢ p: T
--------------------- "Deref"
move ⊢ &mut p: &mut T

ref ⊢ x: T
------------- "BindingBorrow"
bm ⊢ ref x: T

ref mut ⊢ x: T
----------------- "BindingBorrow"
bm ⊢ ref mut x: T


--------- "Binding"
bm ⊢ x: T


------------- "Binding"
bm ⊢ mut x: T
