tests/snapshots/bundle_rules@structural-SequentUserVisible.snap
---
source: src/analyses/compute_rules.rs
info:
  bundle_name: structural
  options:
    match_constructor_through_ref: false
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: Error
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: false
    ref_binding_on_inherited: Error
    mut_binding_on_inherited: Error
---
real ⊢ p0: T0,  real ⊢ p1: T1
----------------------------- "Constructor"
_ ⊢ [p0, p1]: [T0, T1]

real ⊢ p: T
----------- "Deref"
r ⊢ &p: &T

real ⊢ p: T
------------------ "Deref"
r ⊢ &mut p: &mut T

inh ⊢ x: &T
--------------- "BindingBorrow"
real ⊢ ref x: T

inh ⊢ x: &mut T
------------------- "BindingBorrow"
real ⊢ ref mut x: T


-------- "Binding"
r ⊢ x: T


--------------- "Binding"
real ⊢ mut x: T
